tests/paczka1/small_fuzzy/56323887.err
Error in line 2: elWNimCxpqL A13 31,4
Error in line 13: elWNimCxpqL A13 96,9
